unpackaged/main/default/objects/SDO_Service_Workforce_VoiceCall_History__c/SDO_Service_Workforce_VoiceCall_History__c.object-meta.xml
<CustomObject>
    <description>What: Used to showcase Workforce Engagement.  
Who: Marc Hutchinson &amp; the Service Team.
When: July 2021</description>
    <label>*Voice Call History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Voice Call History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>*Voice Call History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>