unpackaged/main/default/objects/SDO_Service_Workforce_VoiceCall_History__c/fields/Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>Handle_Time__c</fullName>
    <label>Handle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>