unpackaged/main/default/objects/SDO_Service_Workforce_VoiceCall_History__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>